<resources>
	<string name="app_name">ScoringBola</string>
	<string name="profil_persib">Persib Bandung or commonly known as Persib [per sib], is a professional football club based in Bandung, West Java, Indonesia, which currently competes in the highest tier of Indonesian football, the Liga 1. The club was founded in June 1933 from a merger of three clubs. Since the beginning of Liga Indonesia era, the club has never been relegated from the top-flight league. Their current home stadium is the new Gelora Bandung Lautan Api Stadium which has a capacity of 38,000 spectators. The club is widely known by their nickname, which is Maung Bandung (The Bandung Tigers) and Pangeran Biru (The Blue Prince). They recently won their first Indonesia Super League (Now known as Liga 1) title in 2014, their first title of the newly formed Liga Indonesia in 1995, and 5 Perserikatan titles. The club also managed to reach the quarter-finals of the Asian Club Championship (Now AFC Champions League) in 1995 and in recent years is rising rapidly in overall performance.</string>
	<string name="profil_persija">Persatuan Sepak Bola Indonesia Jakarta, commonly known as Persija Jakarta, is a Football club based in Jakarta, Indonesia. The club has won 10 League titles, and they have not been relegated since the competition start in 1930.[1] Persija is one of the teams who founded the PSSI in 1930 along with several other teams.[2] They currently compete in the Liga 1.</string>
	<string name="persib_bandung">Persib Bandung</string>
	<string name="persija_jakarta">Persija Jakarta</string>
	<string name="inc">+</string>
	<string name="reset">reset</string>
	<string name="dec">-</string>
	<string name="warning_negatif">Tidak Bisa Negatif !</string>
	<string name="news">news</string>
	<string name="sumber">sumber</string>
	<string name="lokasi">lokasi</string>
	<string name="title_activity_nav_bar">NavBarActivity</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
