<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorGray"
	android:orientation="vertical"
	tools:context="com.adamnain.scoringbola.PersibActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="@color/colorBlue"
		android:orientation="vertical">

		<ImageView
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_gravity="center"
			android:layout_margin="8dp"
			android:layout_marginBottom="-600dp"
			android:src="@drawable/persib" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="Persib"
			android:textColor="@color/colorWhite"
			android:textSize="20dp" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="-16dp"
		android:layout_weight="2"
		android:background="@color/colorWhite"
		android:orientation="vertical"
		android:padding="16dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/profil_persib" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btn_sumberPersib"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sumber" />

			<Button
				android:id="@+id/btn_lokPersib"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lokasi" />

		</LinearLayout>


	</LinearLayout>


</LinearLayout>
